--- a/lib/sw_services/xilpdi/src/CMakeLists.txt
+++ b/lib/sw_services/xilpdi/src/CMakeLists.txt
@@ -4,6 +4,7 @@ cmake_minimum_required(VERSION 2.8.9)
 project(xilpdi)
 
 find_package(common)
+collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 include_directories(${CMAKE_BINARY_DIR}/include)
 collect (PROJECT_LIB_SOURCES xilpdi.c)
