--- a/lib/sw_apps/lwip_tcp_perf_server/data/lwip_tcp_perf_server.yaml
+++ b/lib/sw_apps/lwip_tcp_perf_server/data/lwip_tcp_perf_server.yaml
@@ -9,6 +9,8 @@ maintainers:
 
 type: apps
 
+description: The LwIP TCP Server application is used for creating TCP server using light-weight IP stack (lwIP). This application sets up the board to use default IP address 192.168.1.10 and IPv6 link local address when ipv6_enable is true, with MAC address 00:0a:35:00:01:02. The application creates TCP server on board and starts listening for TCP client connections. It will display client connection info and also display interim and average TCP statistics for data transfer. This application handles only 1 client connection at a time.
+
 properties:
   reg:
     description: Physical base address and size of the controller register map
