--- a/lib/sw_apps/lwip_udp_perf_client/data/lwip_udp_perf_client.yaml
+++ b/lib/sw_apps/lwip_udp_perf_client/data/lwip_udp_perf_client.yaml
@@ -9,6 +9,7 @@ maintainers:
 
 type: apps
 
+description: The LwIP UDP Perf Client application is used for creating UDP client and measure UDP uplink performance using light-weight IP stack (lwIP). This application sets up the board to use default IP address 192.168.1.10, with MAC address 00:0a:35:00:01:02. This application creates UDP client on board and make connection with UDP server running on host machine. It will display connection information along with interim and average UDP statistics for data transfer.
 properties:
   reg:
     description: Physical base address and size of the controller register map
