--- a/lib/sw_apps/lwip_udp_perf_server/data/lwip_udp_perf_server.yaml
+++ b/lib/sw_apps/lwip_udp_perf_server/data/lwip_udp_perf_server.yaml
@@ -7,6 +7,8 @@ title: lwIP UDP Perf Server
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+description: The LwIP UDP Perf Server application is used for creating UDP server and measure downlink performance using light-weight IP stack (lwIP). This application sets up the board to use default IP address 192.168.1.10, with MAC address 00:0a:35:00:01:02. The application creates UDP server on board and starts listening for UDP client connections. It will display client connection information with interim and average UDP statistics for data transfer.
+
 type: apps
 
 properties:
