--- a/lib/sw_services/xilmailbox/examples/CMakeLists.txt
+++ b/lib/sw_services/xilmailbox/examples/CMakeLists.txt
@@ -5,8 +5,18 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/XilmailboxExample.cmake)
 project(xilmailbox)
 
 find_package(common)
-include(${CMAKE_SOURCE_DIR}/../src/xilmailbox.cmake NO_POLICY_SCOPE)
 enable_language(C ASM)
+
+list(LENGTH IPIPSU_NUM_DRIVER_INSTANCES _len)
+if(${_len} EQUAL 0)
+    message(FATAL_ERROR "This application requires an IPI instance in the hardware.")
+else()
+    list(GET IPIPSU0_PROP_LIST 0 XMAILBOX_IPI_BASEADDRESS)
+    list(GET IPIPSU0_PROP_LIST 1 XMAILBOX_IPI_CHANNEL_ID)
+endif()
+
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../src/xilmailbox_hwconfig.h.in ${CMAKE_BINARY_DIR}/include/xilmailbox_hwconfig.h)
+
 collect(PROJECT_LIB_DEPS xilstandalone)
 collect(PROJECT_LIB_DEPS xil)
 collect(PROJECT_LIB_DEPS xiltimer)
