--- a/lib/sw_apps/lwip_tcp_perf_client/src/CMakeLists.txt
+++ b/lib/sw_apps/lwip_tcp_perf_client/src/CMakeLists.txt
@@ -38,8 +38,12 @@ string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINK_OPTIONS})
 add_executable(${APP_NAME}.elf ${_sources})
 target_link_libraries(${APP_NAME}.elf -Wl,-T -Wl,\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -L\"${CMAKE_LIBRARY_PATH}/\" -L\"${USER_LINK_DIRECTORIES}/\" -Wl,--start-group,-l${_deps} -Wl,--end-group)
 target_compile_definitions(${APP_NAME}.elf PUBLIC ${USER_COMPILE_DEFINITIONS})
+if(DEFINED CMAKE_SIZE)
+add_custom_command(
+	TARGET ${APP_NAME}.elf POST_BUILD
+	COMMAND ${CMAKE_SIZE} --format=berkeley ${APP_NAME}.elf)
+endif()
 target_include_directories(${APP_NAME}.elf PUBLIC "${CMAKE_BINARY_DIR}/include")
-print_elf_size(CMAKE_SIZE ${APP_NAME})
 if (${NON_YOCTO})
    set (INCLUDE_DIRS
        "${CMAKE_INCLUDE_PATH}/include/"
